Fix back mouse button on Interstitial pages

Since Interstitial pages don't allow navigation they can't be told to
go back from the renderer. Trap the back mouse button in the interstitial
page and handle it directly.

BUG=852230

Change-Id: Ibbd5d97a9bd692a0b431a19eb6466b0512e7bce5
Reviewed-on: https://chromium-review.googlesource.com/1194831
Commit-Queue: Dave Tapuska <dtapuska@chromium.org>
Reviewed-by: Nasko Oskov <nasko@chromium.org>
Cr-Commit-Position: refs/heads/master@{#587213}
Former-commit-id: 04add8c6cd47cbac836956d9db9d15ea64d34855