content/browser/renderer_host/render_widget_host_impl.cc
@@ -1246,6 +1246,10 @@ void RenderWidgetHostImpl::ForwardMouseEventWithLatencyInfo(
   if (ShouldDropInputEvents())
     return;
 
+  // Delegate must be non-null, due to |ShouldDropInputEvents()| test.
+  if (delegate_->PreHandleMouseEvent(mouse_event))
+    return;
+
   auto* touch_emulator = GetExistingTouchEmulator();
   if (touch_emulator &&
       touch_emulator->HandleMouseEvent(mouse_event, GetView())) {
