content/browser/frame_host/interstitial_page_impl_browsertest.cc
@@ -199,6 +199,15 @@ class InterstitialPageImplTest : public ContentBrowserTest {
     EXPECT_EQ(expected_title, title_watcher.WaitAndGetTitle());
   }
 
+  void PerformBack() {
+    RenderFrameHostImpl* rfh =
+        static_cast<RenderFrameHostImpl*>(interstitial_->GetMainFrame());
+    rfh->GetRenderWidgetHost()->ForwardMouseEvent(blink::WebMouseEvent(
+        blink::WebInputEvent::Type::kMouseUp, blink::WebFloatPoint(),
+        blink::WebFloatPoint(), blink::WebPointerProperties::Button::kBack, 0,
+        0, base::TimeTicks::Now()));
+  }
+
  private:
   std::unique_ptr<InterstitialPageImpl> interstitial_;
 
@@ -347,6 +356,21 @@ IN_PROC_BROWSER_TEST_F(InterstitialPageImplTest, UnderlyingSubframeCommit) {
   // The underlying RenderWidgetHostView should still not be showing.
   EXPECT_FALSE(web_contents->GetMainFrame()->GetView()->IsShowing());
   EXPECT_TRUE(web_contents->GetMainFrame()->GetRenderWidgetHost()->is_hidden());
+
+  TearDownInterstitialPage();
+}
+
+IN_PROC_BROWSER_TEST_F(InterstitialPageImplTest, BackMouseButton) {
+  ASSERT_TRUE(embedded_test_server()->Start());
+
+  // Load something into the WebContents.
+  EXPECT_TRUE(NavigateToURL(
+      shell(), GURL(embedded_test_server()->GetURL("/title1.html"))));
+  SetUpInterstitialPage();
+
+  EXPECT_TRUE(shell()->web_contents()->ShowingInterstitialPage());
+  PerformBack();
+  EXPECT_FALSE(shell()->web_contents()->ShowingInterstitialPage());
 
   TearDownInterstitialPage();
 }
